...
        </View>
      </View>
    );
  };

  return (
    <View testID="daily-forecast" style={styles.forecastContainer}>
      <View style={styles.forecastHeader}>
        <Text style={styles.forecastTitle}>{t('forecastTitle')}</Text>
        <View style={styles.forecastLabels}>
          <Text style={styles.forecastLabelMax}>{t('forecastMax')}</Text>
          <Text style={styles.forecastLabelMin}>{t('forecastMin')}</Text>
        </View>
...
